main/default/objects/Event__c/fields/Add_Session_Calendar_to_Summary_Page__c.field-meta.xml
<CustomField>
    <fullName>Add_Session_Calendar_to_Summary_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Session Calendar to Summary Page</label>
    <type>Checkbox</type>
</CustomField>