main/default/objects/Event__c/fields/Attended_Participant_Fields_JSON__c.field-meta.xml
<CustomField>
    <fullName>Attended_Participant_Fields_JSON__c</fullName>
    <label>Attended Participant Fields JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>