main/default/objects/Event__c/fields/Calendar_Invite_Attendance_QR_Code__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Invite_Attendance_QR_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to determine if QR Code is to be used for Attendance Tracking</description>
    <label>Calendar Invite Attendance QR Code</label>
    <type>Checkbox</type>
</CustomField>