main/default/objects/Event__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign__c</referenceTo>
    <relationshipName>Events</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>