main/default/objects/Event__c/fields/ChangeEventTypeAction__c.field-meta.xml
<CustomField>
    <fullName>ChangeEventTypeAction__c</fullName>
    <description>Hidden field created for triggering MS Teams integration when the Event Type or Virtual Meeting Platform is updated via ChangeEventType Aura Component</description>
    <label>ChangeEventTypeAction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>