main/default/objects/Event__c/fields/Company_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Company_Logo_URL__c</fullName>
    <label>Company Logo URL</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>