main/default/objects/Event__c/fields/Compass_Capture__c.field-meta.xml
<CustomField>
    <fullName>Compass_Capture__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compass Capture</label>
    <referenceTo>Compass_Capture__c</referenceTo>
    <relationshipLabel>Event</relationshipLabel>
    <relationshipName>Event</relationshipName>
    <type>Lookup</type>
</CustomField>