main/default/objects/Event__c/fields/Confirmation_Ending_Message__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Ending_Message__c</fullName>
    <description>This field stores the ending message for the confirmation email.</description>
    <label>Confirmation Ending Message</label>
    <type>TextArea</type>
</CustomField>