main/default/objects/Event__c/fields/Confirmation_Reminder_Ending_Message__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Reminder_Ending_Message__c</fullName>
    <label>Confirmation Reminder Ending Message</label>
    <type>TextArea</type>
</CustomField>