main/default/objects/Event__c/fields/Confirmation_Welcome_Message__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Welcome_Message__c</fullName>
    <description>This field stores the welcome message in the confirmation email.</description>
    <label>Confirmation Welcome Message</label>
    <type>TextArea</type>
</CustomField>