main/default/objects/Event__c/fields/Contact_Us_Page_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact_Us_Page_Title__c</fullName>
    <defaultValue>&apos;Contact Us&apos;</defaultValue>
    <label>Contact Us Page Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>