main/default/objects/Event__c/fields/Contact_Us_Tag_Line__c.field-meta.xml
<CustomField>
    <fullName>Contact_Us_Tag_Line__c</fullName>
    <label>Contact Us Tag Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>