main/default/objects/Event__c/fields/Do_Not_Send_Event_Confirmation_email__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Send_Event_Confirmation_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Send Event Confirmation email</label>
    <type>Checkbox</type>
</CustomField>