main/default/objects/Event__c/fields/Do_Not_Send_Resource_Confirmation_Email__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Send_Resource_Confirmation_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do Not Send Resource Confirmation Email</description>
    <label>Do Not Send Resource Confirmation Email</label>
    <type>Checkbox</type>
</CustomField>