main/default/objects/Event__c/fields/Email_Logo_URL2__c.field-meta.xml
<CustomField>
    <fullName>Email_Logo_URL2__c</fullName>
    <inlineHelpText>Email Logo URL for Event Invitation Notification and Event Registration Reminder</inlineHelpText>
    <label>Email Logo URL2</label>
    <type>TextArea</type>
</CustomField>