main/default/objects/Event__c/fields/Email_Message_CC__c.field-meta.xml
<CustomField>
    <fullName>Email_Message_CC__c</fullName>
    <label>Email Message CC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>