main/default/objects/Event__c/fields/Email_Sender_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Sender_Id__c</fullName>
    <label>Email Sender Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>