main/default/objects/Event__c/fields/Event_Details__c.field-meta.xml
<CustomField>
    <fullName>Event_Details__c</fullName>
    <description>Contains the Static Event Details.
            Gets updated when Event&apos;s Start/End Datetimes are updated.</description>
    <label>Event Details (Date)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>