main/default/objects/Event__c/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <label>Event Id</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>