main/default/objects/Event__c/fields/Event_Pages__c.field-meta.xml
<CustomField>
    <fullName>Event_Pages__c</fullName>
    <label>Event Pages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
                <default>true</default>
                <label>Home</label>
            </value>
            <value>
                <fullName>Sessions</fullName>
            </value>
            <value>
                <fullName>Materials</fullName>
            </value>
            <value>
                <fullName>Issue Tracker</fullName>
            </value>
            <value>
                <fullName>Parking Lot</fullName>
            </value>
            <value>
                <fullName>Survey</fullName>
            </value>
            <value>
                <fullName>Contact Us</fullName>
            </value>
            <value>
                <fullName>Learn More</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>