main/default/objects/Event__c/fields/Event_Register_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Event_Register_Page_URL__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE( Event_Page_URL__c , &apos;CompassEvents&apos;, &apos;Compass&apos;), &apos;events&apos;, &apos;registration&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Register Page URL</label>
    <type>Text</type>
</CustomField>