main/default/objects/Event__c/fields/Event_Time_Details__c.field-meta.xml
<CustomField>
    <fullName>Event_Time_Details__c</fullName>
    <label>Event Details (Time)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>