main/default/objects/Event__c/fields/Home_Page_Title__c.field-meta.xml
<CustomField>
    <fullName>Home_Page_Title__c</fullName>
    <defaultValue>&apos;Home&apos;</defaultValue>
    <label>Home Page Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>