main/default/objects/Event__c/fields/Internal_Logistics_Required__c.field-meta.xml
<CustomField>
    <fullName>Internal_Logistics_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Logistics Required?</label>
    <type>Checkbox</type>
</CustomField>