main/default/objects/Event__c/fields/Invite_Ending_Message__c.field-meta.xml
<CustomField>
    <fullName>Invite_Ending_Message__c</fullName>
    <description>This field stores the ending message in the invitation email.</description>
    <label>Registration Ending Message</label>
    <type>TextArea</type>
</CustomField>