main/default/objects/Event__c/fields/Invite_Reminder_Ending_Message__c.field-meta.xml
<CustomField>
    <fullName>Invite_Reminder_Ending_Message__c</fullName>
    <description>Invite Reminder Ending Message</description>
    <label>Invite Reminder Ending Message</label>
    <type>TextArea</type>
</CustomField>