main/default/objects/Event__c/fields/Invite_Welcome_Message__c.field-meta.xml
<CustomField>
    <fullName>Invite_Welcome_Message__c</fullName>
    <description>This field store the welcome message of the invitation email</description>
    <label>Registration Welcome Message</label>
    <type>TextArea</type>
</CustomField>