main/default/objects/Event__c/fields/Issue_Tracker_Page_Title__c.field-meta.xml
<CustomField>
    <fullName>Issue_Tracker_Page_Title__c</fullName>
    <defaultValue>&apos;Issue Tracker&apos;</defaultValue>
    <label>Issue Tracker Page Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>