main/default/objects/Event__c/fields/Learn_More_Page_Title__c.field-meta.xml
<CustomField>
    <fullName>Learn_More_Page_Title__c</fullName>
    <defaultValue>&apos;Learn More&apos;</defaultValue>
    <label>Learn More Page Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>