main/default/objects/Event__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Location_Events</relationshipName>
    <type>Lookup</type>
</CustomField>