main/default/objects/Event__c/fields/Materials_Page_Title__c.field-meta.xml
<CustomField>
    <fullName>Materials_Page_Title__c</fullName>
    <defaultValue>&apos;Materials&apos;</defaultValue>
    <label>Materials Page Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>