main/default/objects/Event__c/fields/Outreach_Notification__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Notification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to Outreach Notification. If this field is populated and related the Session does not have related Outreach Notification, this will be used as the setting for that Session.</description>
    <inlineHelpText>If the related Session does not have related Outreach Notification, this will be used as the setting for that Session.</inlineHelpText>
    <label>Outreach Notification</label>
    <referenceTo>Outreach_Notification__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>