main/default/objects/Event__c/fields/Parking_Lot_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Parking_Lot_Close_Date__c</fullName>
    <label>Parking Lot Close Date</label>
    <type>Date</type>
</CustomField>