main/default/objects/Event__c/fields/Parking_Lot_Message__c.field-meta.xml
<CustomField>
    <fullName>Parking_Lot_Message__c</fullName>
    <label>Parking Lot Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>