main/default/objects/Event__c/fields/Parking_Lot_Page_Title__c.field-meta.xml
<CustomField>
    <fullName>Parking_Lot_Page_Title__c</fullName>
    <defaultValue>&apos;Parking Lot&apos;</defaultValue>
    <label>Parking Lot Page Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>