main/default/objects/Event__c/fields/Parking_Lot_Tag_Line__c.field-meta.xml
<CustomField>
    <fullName>Parking_Lot_Tag_Line__c</fullName>
    <label>Parking Lot Tag Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>