main/default/objects/Event__c/fields/Parking_Lot_User__c.field-meta.xml
<CustomField>
    <fullName>Parking_Lot_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parking Lot User</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>