main/default/objects/Event__c/fields/Personalized_Event_Page_Login_Button__c.field-meta.xml
<CustomField>
    <fullName>Personalized_Event_Page_Login_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personalized Event Page Login Button</label>
    <type>Checkbox</type>
</CustomField>