main/default/objects/Event__c/fields/Registration_Fields_JSON__c.field-meta.xml
<CustomField>
    <fullName>Registration_Fields_JSON__c</fullName>
    <label>Registration Fields JSON</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>