main/default/objects/Event__c/fields/Registration_Message__c.field-meta.xml
<CustomField>
    <fullName>Registration_Message__c</fullName>
    <defaultValue>&apos;Please fill in the required information and select your preferred sessions. Remember to submit your selections!&apos;</defaultValue>
    <label>Registration Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>