main/default/objects/Event__c/fields/Registration_Reminder_Additional_Message__c.field-meta.xml
<CustomField>
    <fullName>Registration_Reminder_Additional_Message__c</fullName>
    <label>Registration Reminder Additional Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>