main/default/objects/Event__c/fields/Registration_Tag_Line__c.field-meta.xml
<CustomField>
    <fullName>Registration_Tag_Line__c</fullName>
    <defaultValue>&apos;Select Your Sessions and Register&apos;</defaultValue>
    <label>Registration Tag Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>