main/default/objects/Event__c/fields/Resource_Calendar_Invite_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Resource_Calendar_Invite_Delivery__c</fullName>
    <description>Resource Calendar Invite Delivery</description>
    <label>Resource Calendar Invite Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Send on session registration</fullName>
            </value>
            <value>
                <fullName>Send on session confirmation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>