main/default/objects/Event__c/fields/Resource_Confirmation_Email_Body__c.field-meta.xml
<CustomField>
    <fullName>Resource_Confirmation_Email_Body__c</fullName>
    <description>Resource Confirmation Email Body</description>
    <label>Resource Confirmation Email Body</label>
    <type>TextArea</type>
</CustomField>