main/default/objects/Event__c/fields/Resource_Confirmation_Email_Ending__c.field-meta.xml
<CustomField>
    <fullName>Resource_Confirmation_Email_Ending__c</fullName>
    <description>Resource Confirmation Email Ending</description>
    <label>Resource Confirmation Email Ending</label>
    <type>TextArea</type>
</CustomField>