main/default/objects/Event__c/fields/Resource_Confirmation_Reminder_Ending__c.field-meta.xml
<CustomField>
    <fullName>Resource_Confirmation_Reminder_Ending__c</fullName>
    <description>Resource Confirmation Reminder Ending</description>
    <label>Resource Confirmation Reminder Ending</label>
    <type>TextArea</type>
</CustomField>