main/default/objects/Event__c/fields/Resource_Confirmation_Reminder_Welcome__c.field-meta.xml
<CustomField>
    <fullName>Resource_Confirmation_Reminder_Welcome__c</fullName>
    <description>Resource Confirmation Reminder Welcome</description>
    <label>Resource Confirmation Reminder Welcome</label>
    <type>TextArea</type>
</CustomField>