main/default/objects/Event__c/fields/Session_Calendar_Invite_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Session_Calendar_Invite_Delivery__c</fullName>
    <description>This field determines in which stage between registration or confirmation is the Calendar Invite sent</description>
    <label>Session Calendar Invite Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Send on session registration</fullName>
                <default>true</default>
                <label>Send on session registration</label>
            </value>
            <value>
                <fullName>Send on session confirmation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>