main/default/objects/Event__c/fields/Sessions_Calendar_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Sessions_Calendar_Page_URL__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE( Event_Page_URL__c , &apos;CompassEvents&apos;, &apos;Compass&apos;), &apos;events&apos;, &apos;sessions-calendar&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sessions Calendar Page URL</label>
    <type>Text</type>
</CustomField>