main/default/objects/Event__c/fields/Sessions_Page_Title__c.field-meta.xml
<CustomField>
    <fullName>Sessions_Page_Title__c</fullName>
    <defaultValue>&apos;Sessions&apos;</defaultValue>
    <label>Sessions Page Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>