main/default/objects/Event__c/fields/Sessions_with_General_Materials__c.field-meta.xml
<CustomField>
    <fullName>Sessions_with_General_Materials__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Admins can select to display general materials on the Sessions page.</description>
    <label>Sessions with General Materials</label>
    <type>Checkbox</type>
</CustomField>