main/default/objects/Event__c/fields/Show_To_Links__c.field-meta.xml
<CustomField>
    <fullName>Show_To_Links__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Event Page to Summary Page</label>
    <type>Checkbox</type>
</CustomField>