main/default/objects/Event__c/fields/Site_picklist_values__c.field-meta.xml
<CustomField>
    <fullName>Site_picklist_values__c</fullName>
    <inlineHelpText>Field where values for the Site field in the community event registration page can be defined. Values should be comma-separated and configured in the Registration Field Configuration custom metadata settings to look into this field.</inlineHelpText>
    <label>Site Picklist Values</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>