main/default/objects/Event__c/fields/Subtitle__c.field-meta.xml
<CustomField>
    <fullName>Subtitle__c</fullName>
    <label>Subtitle</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>