main/default/objects/Event__c/fields/Survey_Page_Title__c.field-meta.xml
<CustomField>
    <fullName>Survey_Page_Title__c</fullName>
    <defaultValue>&apos;Survey&apos;</defaultValue>
    <label>Survey Page Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>