main/default/objects/Event__c/fields/Virtual_Meeting_Platform__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Meeting_Platform__c</fullName>
    <label>Virtual Meeting Platform</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Event_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MS Teams</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>