main/default/objects/Event__c/recordTypes/Create_New_Event.recordType-meta.xml
<RecordType>
    <fullName>Create_New_Event</fullName>
    <active>true</active>
    <description>Recordtype on initial creation</description>
    <label>Create New Event</label>
</RecordType>