main/default/objects/Event__c/recordTypes/Event.recordType-meta.xml
<RecordType>
    <fullName>Event</fullName>
    <active>true</active>
    <description>Main RecordType for Events</description>
    <label>Event</label>
</RecordType>