main/default/objects/Event__c/validationRules/Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>Start_Date_Time__c &gt;=  End_Date_Time__c</errorConditionFormula>
    <errorMessage>Start Date must be less than the End Date.</errorMessage>
</ValidationRule>