main/default/objects/Event__c/listViews/All_Active_Events.listView-meta.xml
<ListView>
    <fullName>All_Active_Events</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Event_Id__c</columns>
    <columns>Start_Date_Time__c</columns>
    <columns>End_Date_Time__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Journey__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Registration Closed,Completed,Aborted</value>
    </filters>
    <label>All Active Events</label>
</ListView>