main/default/objects/Event__c/listViews/All_VA_Events.listView-meta.xml
<ListView>
    <fullName>All_VA_Events</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Event_Id__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>VA</value>
    </filters>
    <label>All VA Events</label>
</ListView>